--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employapp",
   "version": "1.0.0",
-  "main": "employe.js",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
